Changelog Notes:
Nerfed Terminator aim speed
Fixed missing playerdata in initialization and incorrect values between init and oncreateplayer
Fixed Second Wind giving you more hardy charges than you should.