@@ -84,7 +84,7 @@ UI_EN = {
     UI_trait_gordanite = "Gordanite",
     UI_trait_gordanitedesc = "You are adept at using crowbars as weapons.<br>Your attacks with crowbars have a higher critical hit chance as well as increased base damage.<br>+1 Long Blunt<br>Effect scales with Long Blunt skill.",
     UI_trait_indefatigable = "Indefatigable",
-    UI_trait_indefatigabledesc = "You're one hard person to kill. Whenever you are reduced below 15% HP, you are healed to full HP.<br>This effect may only occur once per 7 days and does not cure zombification.<br>Note: This does not heal injuries caused by Injured, Broke Leg or Burn Ward Patient.",
+    UI_trait_indefatigabledesc = "You're one hard person to kill. Whenever you are reduced below 15% HP or dragged down, you are healed to full HP.<br>This effect may only occur once per 7 days and does not cure zombification.<br>Note: Drag Down causes the timer to extend twice, because there's no other way to survive it in-game.<br>Note: This does not heal injuries caused by Injured, Broke Leg or Burn Ward Patient.",
     UI_trait_badteeth = "Bad Teeth",
     UI_trait_badteethdesc = "You never took much care of your dental health.<br>When consuming food, you may experience pain. Larger portions cause more pain.",
     UI_trait_hardy = "Hardy",
